publishing files from approvedFiles in pubReq only in AcceptedPublishingRequestEventHandler